llvm-gcc-4.2-2.9/gcc/testsuite/g++.apple/asm-block-62.C
/* APPLE LOCAL file CW asm blocks */
/* { dg-do compile { target *-*-darwin* } } */
/* { dg-options { -fasm-blocks } } */
/* Radar 4197305 */

#if 1
@@		/* { dg-error "expected unqualified-id before '@' token" } */
#endif
